--- a/bibtex/IEEENSRE-ADMW+19.bib
+++ b/bibtex/IEEENSRE-ADMW+19.bib
@@ -1,6 +1,6 @@
 @ARTICLE{IEEENSRE:ADMW+19, 
 author={Anisha Agarwal and Rafael Dowsley and Nicholas D. McKinney and Dongrui Wu and Chin-Teng Lin and Martine De Cock and Anderson C. A. Nascimento}, 
-journal={To appear on IEEE Transactions on Neural Systems \& Rehabilitation Engineering}, 
+journal={To appear on IEEE Transactions on Neural Systems and Rehabilitation Engineering}, 
 title={Protecting Privacy of Users in Brain-Computer Interface Applications}, 
 year={2019}, 
 }
